The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name:
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2003/11/04 11:50:00 CST
Tag: blume-20031104-move-libraries
Description:

Eliminated the "dont_move_libraries" directive in config/targets.
(The mechanism was broken and could not be fixed easily.  Moreover,
there does not seem to be any reason not to move all libraries into
lib during installation.  I originally implemented this directive as a
backward-compatibility feature when I first introduced the new CM.
Now that things have been stable for a long time and going back to the
old CM is not an option, there is no reason to keep it around.)

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2003/11/03 16:00:00 CST
Tag: blume-20031103-installdir
Description:

Made installer honor INSTALLDIR variable again.  (Thanks to Chris
Richards for pointing out the problem and providing the solution.)

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2003/10/01 17:05:00 CDT
Tag: blume-20031001-lal-mlrisc
Description:

MLRISC bug fix from Lal.

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2003/09/30 16:10:00 CDT
Tag: blume-20030930-primio-bat
Description:

1. Added openVector, nullRd, and nullWr to PRIM_IO.
2. Improved .bat files (for Win32 port) to make things work under Win95.
   (thanks to Aaron S. Hawley for this one)

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2003/09/26 16:05:00 CDT