@@ -1,6 +1,12 @@
 BOOT: the location of the latest boot files.
 ----------------------------------------------------------------------
 Name: Matthias Blume
+Date: 2003/11/06 12:00:00 CST
+Tag: Release_110_44
+Version: 110.44
+Location: http://smlnj.cs.uchicago.edu/dist/working/110.44/
+----------------------------------------------------------------------
+Name: Matthias Blume
 Date: 2003/09/26 15:00:00 CDT
 Tag: blume-20030926-110_43_3
 Version: 110.43.3
