@@ -39,22 +39,34 @@ if [ "$USED_ENUMS" = "TRUE" ]; then
   echo "#include <unistd.h>" > $SRCFILE
   $CPP $SRCFILE > $INCLFILE
   rm -f $SRCFILE
-elif [ -r "/usr/include/sys/unistd.h" ]; then
-  INCLFILE=/usr/include/sys/unistd.h
-elif [ -r "/usr/include/confname.h" ]; then
-  INCLFILE=/usr/include/confname.h
-elif [ -r "/usr/include/unistd.h" ]; then
-  INCLFILE=/usr/include/unistd.h
-elif [ -r "/usr/include/bsd/unistd.h" ]; then
-  INCLFILE=/usr/include/bsd/unistd.h
 else
+# search the possible include files looking for a source
+# of the constants.
+  FILES="\
+	/usr/include/unistd.h \
+	/usr/include/sys/unistd.h \
+	/usr/include/bsd/unistd.h \
+	/usr/include/confname.h \
+    "
+  INCLFILE="none"
+  for f in $FILES ; do
+    if test -r $f ; then
+      grep $PFIX $f > /dev/null
+      if test $? -eq 0 ; then
+	INCLFILE=$f
+	break;
+      fi
+    fi
+  done
+fi
+if test x$INCLFILE = xnone ; then
   echo "gen-posix-names.sh: unable to find <unistd.h>"
   exit 1
 fi
 
 echo "/* $OUTF" >> $OUTF
 echo " *"       >> $OUTF
-echo " * This file is generated by gen-posix-names.sh"       >> $OUTF
+echo " * This file is generated by gen-posix-names.sh from $INCLFILE" >> $OUTF
 echo " */"       >> $OUTF
 
 if [ "$USED_ENUMS" = "TRUE" ]; then
